# rust-sarcastic-text-as-a-service

./: Cargo.toml  LICENSE  README.md
src/: api.rs  main.rs
static/: index.htm
