[package]
name = "rust-sarcastic-text-as-a-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
actix-web = "4.1"
serde = { version = "1", features = ["derive"] }
validator = "0.16"
validator_derive = "0.16"
rand = "0.8.5"
